--- a/themes/studio-fika/assets/scss/table.scss
+++ b/themes/studio-fika/assets/scss/table.scss
@@ -17,20 +17,15 @@ table {
 
     tr {
         td {
-            border-bottom: 1px dotted;
-
-            @include safari-only {
-                border-style: solid;
-            }
-
-            @include themify {
-                border-color: themed('color', 'main', '4');
-            }
+            @include dotted-border($width: 1px, $type: 'bottom', $color: '4');
         }
 
         &:last-child:not(:only-child) {
             td {
-                border-bottom: 0;
+                &::after {
+                    display: none;
+                    border-bottom: none;
+                }
             }
         }
     }
